fix: remove -XX:UseBiasedLock